@@ -6,15 +6,12 @@ import com.liferay.portal.kernel.exception.PortalException;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
 import com.liferay.portal.kernel.model.Layout;
-import com.liferay.portal.kernel.module.configuration.ConfigurationException;
 import com.liferay.portal.kernel.module.configuration.ConfigurationProvider;
 import com.liferay.portal.kernel.theme.ThemeDisplay;
 import com.liferay.portal.kernel.util.ContentTypes;
 
-import java.io.File;
-import java.io.FileInputStream;
+import java.io.InputStream;
 import java.math.BigDecimal;
-import java.nio.file.Files;
 import java.security.MessageDigest;
 import java.util.Map;
 import java.util.Random;
@@ -32,7 +29,6 @@ import it.servizidigitali.gestionepagamenti.common.enumeration.CanalePagamento;
 import it.servizidigitali.gestionepagamenti.common.enumeration.StatoPagamento;
 import it.servizidigitali.gestionepagamenti.integration.common.client.PagamentiClient;
 import it.servizidigitali.gestionepagamenti.integration.common.client.enumeration.TipoPagamentiClient;
-import it.servizidigitali.gestionepagamenti.integration.common.client.exception.PagamentiClientException;
 import it.servizidigitali.gestionepagamenti.integration.common.client.model.MarcaDaBollo;
 import it.servizidigitali.gestionepagamenti.integration.common.client.model.PagamentoDovutoRisposta;
 import it.servizidigitali.gestionepagamenti.model.Pagamento;
@@ -40,6 +36,7 @@ import it.servizidigitali.gestionepagamenti.service.PagamentoLocalService;
 import it.servizidigitali.gestioneprocedure.service.ProceduraLocalService;
 import it.servizidigitali.gestioneservizi.model.Servizio;
 import it.servizidigitali.gestioneservizi.service.ServizioLocalService;
+import it.servizidigitali.richieste.common.enumeration.StatoRichiesta;
 import it.servizidigitali.scrivaniaoperatore.model.AllegatoRichiesta;
 import it.servizidigitali.scrivaniaoperatore.model.Richiesta;
 import it.servizidigitali.scrivaniaoperatore.service.AllegatoRichiestaLocalService;
@@ -52,7 +49,7 @@ import it.servizidigitali.scrivaniaoperatore.service.RichiestaLocalService;
 @Component(immediate = true, service = PagamentoEBolloService.class, configurationPid = "it.servizidigitali.gestionepagamenti.common.configuration.ClientPagamentiEnteConfiguration")
 public class PagamentoEBolloService {
 
-	private static final Log LOG = LogFactoryUtil.getLog(PagamentoEBolloService.class.getName());
+	private static final Log log = LogFactoryUtil.getLog(PagamentoEBolloService.class.getName());
 
 	private volatile ClientPagamentiEnteConfiguration accountClientPagamentiEnteConfiguration;
 
@@ -90,8 +87,7 @@ public class PagamentoEBolloService {
 	@Activate
 	@Modified
 	private void activate(Map<String, Object> props) {
-		accountClientPagamentiEnteConfiguration = ConfigurableUtil
-				.createConfigurable(ClientPagamentiEnteConfiguration.class, props);
+		accountClientPagamentiEnteConfiguration = ConfigurableUtil.createConfigurable(ClientPagamentiEnteConfiguration.class, props);
 	}
 
 	@Reference
@@ -99,21 +95,10 @@ public class PagamentoEBolloService {
 		this.configurationProvider = configurationProvider;
 	}
 
-	public String pagaBollo(long requestTimeMillis, File file, String fileName, long siteGroupId, long companyId,
-			long servizioId, String nomeServizio, String codiceServizio, long userId, String codiceOrganizzazione,
-			String provinciaResidenza, String idFiscaleCliente, String denominazioneCliente, String emailQuietanza,
-			String callbackUrl) throws ConfigurationException, PagamentiClientException {
+	public String pagaBollo(long requestTimeMillis, InputStream inputStream, String fileName, long siteGroupId, long companyId, long servizioId, String nomeServizio, String codiceServizio,
+			long userId, String codiceOrganizzazione, String provinciaResidenza, String idFiscaleCliente, String denominazioneCliente, String emailQuietanza, String callbackUrl) throws Exception {
 
-		LOG.debug("pagaBollo debug params | requestTimeMillis: " + requestTimeMillis + ", file: " + file.toString()
-				+ ", fileName: " + fileName + ", siteGroupId: " + siteGroupId + ", companyId: " + companyId
-				+ ", servizioId: " + servizioId + ", nomeServizio: " + nomeServizio + ", codiceServizio: "
-				+ codiceServizio + ", userId: " + userId + ", codiceOrganizzazione: " + codiceOrganizzazione
-				+ ", provinciaResidenza: " + provinciaResidenza + ", idFiscaleCliente: " + idFiscaleCliente
-				+ ", denominazioneCliente: " + denominazioneCliente + ", emailQuietanza: " + emailQuietanza
-				+ ", callbackUrl" + callbackUrl);
-
-		accountClientPagamentiEnteConfiguration = configurationProvider
-				.getGroupConfiguration(ClientPagamentiEnteConfiguration.class, siteGroupId);
+		accountClientPagamentiEnteConfiguration = configurationProvider.getGroupConfiguration(ClientPagamentiEnteConfiguration.class, siteGroupId);
 
 		String username = accountClientPagamentiEnteConfiguration.clientUsername();
 		String password = accountClientPagamentiEnteConfiguration.clientPassword();
@@ -122,12 +107,11 @@ public class PagamentoEBolloService {
 		String codiceDovuto = accountClientPagamentiEnteConfiguration.codiceDovutoPagamentoMarcaBolloDigitale();
 		String prefissoCausale = accountClientPagamentiEnteConfiguration.prefissoCausalePagamentoMarcaBolloDigitale();
 		String causale = prefissoCausale + "-" + fileName;
-		String idCredito = codiceOrganizzazione + "-" + prefissoCausale + "-" + " - " + fileName + "_"
-				+ requestTimeMillis;
+		String idCredito = codiceOrganizzazione + "-" + prefissoCausale + "-" + " - " + fileName + "_" + requestTimeMillis;
 		String iud = randomString(35);
 
 		MarcaDaBollo marcaDaBollo = new MarcaDaBollo();
-		marcaDaBollo.setHashDocumento(getFileHash(file));
+		marcaDaBollo.setHashDocumento(getFileHash(inputStream));
 		marcaDaBollo.setImporto(importoBollo);
 		marcaDaBollo.setCodiceDovuto(codiceDovuto);
 		marcaDaBollo.setCodiceOrganizzazione(codiceOrganizzazione);
@@ -136,31 +120,27 @@ public class PagamentoEBolloService {
 		marcaDaBollo.setEmailQuietanza(emailQuietanza);
 		marcaDaBollo.setCausale(causale);
 		marcaDaBollo.setIdCredito(idCredito);
-		marcaDaBollo.setStato(StatoPagamento.NUOVO.toString());
 		marcaDaBollo.setIud(iud);
 		marcaDaBollo.setProvinciaResidenza(provinciaResidenza);
 
-		PagamentoDovutoRisposta pagamentoDovutoRisposta = pagamentiClient.pagaDovuto(marcaDaBollo, username, password,
-				wsdlUrl, callbackUrl);
+		PagamentoDovutoRisposta pagamentoDovutoRisposta = pagamentiClient.pagaDovuto(marcaDaBollo, username, password, wsdlUrl, callbackUrl);
 
-		Pagamento pagamento = this.manageRichiestaAndPagamento(file, fileName, siteGroupId, companyId, userId,
-				denominazioneCliente, idCredito, idFiscaleCliente, denominazioneCliente, emailQuietanza, causale,
-				servizioId, nomeServizio, codiceServizio, importoBollo, null, CanalePagamento.WEB.toString(),
-				TipoPagamentiClient.MYPAY.toString(), iud, null, pagamentoDovutoRisposta.getIdSessione(), null, false,
-				StatoPagamento.IN_ATTESA.toString(), 0);
+		Pagamento pagamento = this.manageRichiestaAndPagamento(inputStream, fileName, siteGroupId, companyId, userId, denominazioneCliente, idCredito, idFiscaleCliente, denominazioneCliente,
+				emailQuietanza, causale, servizioId, nomeServizio, codiceServizio, importoBollo, null, CanalePagamento.WEB.toString(), TipoPagamentiClient.MYPAY.toString(), iud, null,
+				pagamentoDovutoRisposta.getIdSessione(), null, false, StatoPagamento.IN_ATTESA.toString(), 0);
 
-		LOG.info("Created new pagamento with id: " + pagamento.getPagamentoId());
+		log.info("Created new pagamento with id: " + pagamento.getPagamentoId());
 
 		return pagamentoDovutoRisposta.getRedirectUrl();
 
 	}
 
-	private String getFileHash(File file) {
+	private String getFileHash(InputStream inputStream) {
 		String hashDocumento = null;
 
 		try {
 
-			byte[] fileBytes = Files.readAllBytes(file.toPath());
+			byte[] fileBytes = inputStream.readAllBytes();
 
 			MessageDigest md = MessageDigest.getInstance("SHA-256");
 
@@ -174,8 +154,9 @@ public class PagamentoEBolloService {
 
 			hashDocumento = builder.toString();
 
-		} catch (Exception e) {
-			LOG.error(e.getMessage(), e);
+		}
+		catch (Exception e) {
+			log.error(e.getMessage(), e);
 		}
 
 		return hashDocumento;
@@ -186,20 +167,15 @@ public class PagamentoEBolloService {
 		int rightLimit = 122; // letter 'z'
 		Random random = new Random();
 
-		String generatedString = random.ints(leftLimit, rightLimit + 1)
-				.filter(i -> (i <= 57 || i >= 65) && (i <= 90 || i >= 97)).limit(length)
+		String generatedString = random.ints(leftLimit, rightLimit + 1).filter(i -> (i <= 57 || i >= 65) && (i <= 90 || i >= 97)).limit(length)
 				.collect(StringBuilder::new, StringBuilder::appendCodePoint, StringBuilder::append).toString();
 
 		return generatedString;
 	}
 
-	public Pagamento manageRichiestaAndPagamento(File file, String fileName, long groupId, long companyId, long userId,
-			String userName, String idCredito, String idFiscaleCliente, String denominazioneCliente,
-			String emailQuietanza, String causale, long servizioId, String nomeServizio, String codiceServizio,
-			BigDecimal importo, BigDecimal commissioni, String canale, String gateway, String iud, String iuv,
-			String idSessione, String pathAvviso, boolean emailInviata, String stato, long proceduraId) {
-
-		long richiestaId = counterLocalService.increment();
+	public Pagamento manageRichiestaAndPagamento(InputStream inputStream, String fileName, long groupId, long companyId, long userId, String userName, String idCredito, String idFiscaleCliente,
+			String denominazioneCliente, String emailQuietanza, String causale, long servizioId, String nomeServizio, String codiceServizio, BigDecimal importo, BigDecimal commissioni, String canale,
+			String gateway, String iud, String iuv, String idSessione, String pathAvviso, boolean emailInviata, String stato, long proceduraId) throws Exception {
 
 		Richiesta richiesta = richiestaLocalService.createRichiesta(counterLocalService.increment());
 		richiesta.setGroupId(groupId);
@@ -207,49 +183,68 @@ public class PagamentoEBolloService {
 		richiesta.setUserName(userName);
 		richiesta.setCodiceFiscale(idFiscaleCliente);
 		richiesta.setEmail(emailQuietanza);
-		richiesta.setStato(stato);
+		richiesta.setOggetto(nomeServizio);
+		richiesta.setStato(StatoRichiesta.ATTESA_PAGAMENTO.name());
 		richiesta.setProceduraId(proceduraId);
 		richiesta.setServizioId(servizioId);
 
 		richiesta = richiestaLocalService.updateRichiesta(richiesta);
 
-		String descrizioneAllegatoRichiesta = String.format(DESCRIZIONE_RICHIESTA, richiestaId);
-
+		long richiestaId = 0;
+		long allegatoRichiestaId = 0;
 		String idDocumentale = null;
+		Pagamento pagamento = null;
 		try {
-			idDocumentale = fileServiceFactory.getActiveFileService().saveRequestFile(fileName, fileName,
-					descrizioneAllegatoRichiesta, codiceServizio, richiestaId, new FileInputStream(file),
+			richiestaId = richiesta.getRichiestaId();
+			String descrizioneAllegatoRichiesta = String.format(DESCRIZIONE_RICHIESTA, richiestaId);
+
+			idDocumentale = fileServiceFactory.getActiveFileService().saveRequestFile(fileName, fileName, descrizioneAllegatoRichiesta, codiceServizio, richiestaId, inputStream,
 					ContentTypes.APPLICATION_OCTET_STREAM, userId, groupId);
-		} catch (Exception e) {
-			LOG.error(e.getMessage(), e);
+
+			AllegatoRichiesta allegatoRichiesta = allegatoRichiestaLocalService.createAllegatoRichiesta(counterLocalService.increment());
+			allegatoRichiesta.setCompanyId(companyId);
+			allegatoRichiesta.setDefinizioneAllegatoId(null);
+			allegatoRichiesta.setDescrizione(descrizioneAllegatoRichiesta);
+			allegatoRichiesta.setGroupId(groupId);
+			allegatoRichiesta.setIdDocumentale(idDocumentale);
+			allegatoRichiesta.setInterno(false);
+			allegatoRichiesta.setNome(fileName);
+			allegatoRichiesta.setPrincipale(true);
+			allegatoRichiesta.setRichiestaId(richiestaId);
+			allegatoRichiesta.setTitolo(fileName);
+			allegatoRichiesta.setUserId(userId);
+			allegatoRichiesta.setUserName(userName);
+			allegatoRichiesta.setVisibile(true);
+
+			allegatoRichiestaLocalService.updateAllegatoRichiesta(allegatoRichiesta);
+
+			allegatoRichiestaId = allegatoRichiesta.getAllegatoRichiestaId();
+
+			pagamento = pagamentoLocalService.create(groupId, userId, userName, idCredito, idFiscaleCliente, denominazioneCliente, emailQuietanza, causale, servizioId, nomeServizio, importo,
+					commissioni, canale, gateway, iud, iuv, idSessione, pathAvviso, emailInviata, stato, richiestaId);
+		}
+		catch (Exception e) {
+			log.error("manageRichiestaAndPagamento :: " + e.getMessage(), e);
+
+			// Rollback
+			if (idDocumentale != null) {
+				fileServiceFactory.getActiveFileService().deleteRequestFile(idDocumentale, groupId);
+			}
+			if (richiestaId != 0) {
+				richiestaLocalService.deleteRichiesta(richiestaId);
+			}
+			if (allegatoRichiestaId != 0) {
+				allegatoRichiestaLocalService.deleteAllegatoRichiesta(allegatoRichiestaId);
+			}
+			throw e;
 		}
 
-		AllegatoRichiesta allegatoRichiesta = allegatoRichiestaLocalService
-				.createAllegatoRichiesta(counterLocalService.increment());
-		allegatoRichiesta.setCompanyId(companyId);
-		allegatoRichiesta.setDefinizioneAllegatoId(null);
-		allegatoRichiesta.setDescrizione(descrizioneAllegatoRichiesta);
-		allegatoRichiesta.setGroupId(groupId);
-		allegatoRichiesta.setIdDocumentale(idDocumentale);
-		allegatoRichiesta.setInterno(false);
-		allegatoRichiesta.setNome(fileName);
-		allegatoRichiesta.setPrincipale(true);
-		allegatoRichiesta.setRichiestaId(richiestaId);
-		allegatoRichiesta.setTitolo(fileName);
-		allegatoRichiesta.setUserId(userId);
-		allegatoRichiesta.setUserName(userName);
-		allegatoRichiesta.setVisibile(true);
+		return pagamento;
 
-		allegatoRichiestaLocalService.updateAllegatoRichiesta(allegatoRichiesta);
-
-		return pagamentoLocalService.create(groupId, userId, userName, idCredito, idFiscaleCliente,
-				denominazioneCliente, emailQuietanza, causale, servizioId, nomeServizio, importo, commissioni, canale,
-				gateway, iud, iuv, idSessione, pathAvviso, emailInviata, stato, richiesta.getRichiestaId());
 	}
 
 	/**
-	 * Carica il servizio corrente in base alla pagina in cui è in esecuzione la
-	 * portlet.
+	 * Carica il servizio corrente in base alla pagina in cui è in esecuzione la portlet.
 	 *
 	 * @param themeDisplay
 	 * @return
@@ -262,8 +257,7 @@ public class PagamentoEBolloService {
 		long organizationId = themeDisplay.getScopeGroup().getOrganizationId();
 		long layoutId = layout.getLayoutId();
 
-		ServizioEnte servizioEnte = servizioEnteLocalService.getServizioEnteByOrganizationIdLayoutId(organizationId,
-				layoutId);
+		ServizioEnte servizioEnte = servizioEnteLocalService.getServizioEnteByOrganizationIdLayoutId(organizationId, layoutId);
 		if (servizioEnte != null) {
 			return servizioLocalService.getServizio(servizioEnte.getServizioId());
 		}
